Change demo page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
-	<title>Booking website</title>
+	<title>Datepicker</title>
 	<link type="text/css" rel="stylesheet" href="jquery.chipmunky-datepicker.css">
 	<script type="text/javascript" src="jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="jquery.chipmunky-datepicker.js"></script>
